--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://csihda.github.io/",
+  "homepage": "http://plasma-mds.github.io/",
   "name": "adamant",
   "version": "1.0.0",
   "private": true,
