--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://csihda.github.io/",
+  "homepage": "https://plasma-mds.github.io/",
   "name": "adamant",
   "version": "1.3.0",
   "private": true,
